--- a/index.html
+++ b/index.html
@@ -35,11 +35,16 @@
   </div>
 
   <div id="countdown"></div>
+  <!-- <div class=" d-flex justify-content-center align-items-center ">
+  </div> -->
   <div id="modal-background" class="hidden"></div>
+
   <div id="result" class="hidden"></div>
 
   <script src="./history.js"></script>
   <script src="./script.js"></script>
+
+
 </body>
 
 </html>
