--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 </head>
 
 <body>
+  <div class="ms-auto me-auto">
+    <a class="text-white p-3 rounded mt-2 pt-4 text-decoration-none bg-info" href="blog.html">
+      Blog
+    </a>
+  </div>
+
   <h1 class="title"><img src="./logo.png" /></h1>
   <div id="show-time">0 seconds</div>
 
