--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <h1 class="title2">History</h1>
       <div class="line"></div>
     </div>
-    <div id="histories"></div>
+    <div id="histories" class="row row-cols-3 "></div>
   </div>
 
   <div id="countdown"></div>
