Modal Position Fix

--- a/index.html
+++ b/index.html
@@ -37,14 +37,17 @@
       <h1 class="title2">History</h1>
       <div class="line"></div>
     </div>
-    <div id="histories" class="row row-cols-md-3 row-cols-lg-3 row-cols-xl-3 gx-5"></div>
+    <!-- row-cols-md-3 row-cols-lg-3 row-cols-xl-3 -->
+    <div id="histories" class="row gx-5"></div>
   </div>
 
   <div id="countdown"></div>
 
   <div id="modal-background" class="hidden"></div>
+  <div class=" d-flex justify-content-center align-items-center ">
+    <div id="result" class="hidden"></div>
 
-  <div id="result" class="hidden"></div>
+  </div>
 
   <script src="./history.js"></script>
   <script src="./script.js"></script>
